force-app/main/default/objects/Router_Rule__c/Router_Rule__c.object-meta.xml
<CustomObject>
    <label>Router Rule</label>
    <nameField>
        <label>Router Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Router Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>