force-app/main/default/objects/Router_Rule__c/fields/Assigned_Count__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Count__c</fullName>
    <label>Assigned Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>