force-app/main/default/objects/Router_Rule__c/fields/Assignment_Method__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Method__c</fullName>
    <label>Assignment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate Matching</fullName>
            </value>
            <value>
                <fullName>Rule-Based Assignment</fullName>
            </value>
            <value>
                <fullName>Territory Assignment</fullName>
            </value>
            <value>
                <fullName>Skill-Based Assignment</fullName>
            </value>
            <value>
                <fullName>Shark Tank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>