force-app/main/default/objects/Router_Rule__c/fields/Connected_Queue__c.field-meta.xml
<CustomField>
    <fullName>Connected_Queue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connected Queue</label>
    <referenceTo>LocationWaitlist</referenceTo>
    <relationshipLabel>Router Rules</relationshipLabel>
    <relationshipName>Router_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>