force-app/main/default/objects/Router_Rule__c/fields/Overflow_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Overflow_Behavior__c</fullName>
    <label>Overflow Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Continue Evaluation</fullName>
            </value>
            <value>
                <fullName>Stop Evaluation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>