force-app/main/default/objects/Router_Rule__c/fields/Router__c.field-meta.xml
<CustomField>
    <fullName>Router__c</fullName>
    <label>Router</label>
    <referenceTo>Router__c</referenceTo>
    <relationshipLabel>Router Rules</relationshipLabel>
    <relationshipName>Router_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>